fix: update datasource URL in application.properties and comment out unused code in ProductService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ProdSync
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ProdSync
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ProdSync
+spring.datasource.url=jdbc:postgresql://192.168.0.103:5432/ProdSync
 spring.datasource.username=postgres
 spring.datasource.password=Amino-acids2003
 spring.datasource.driver-class-name=org.postgresql.Driver
